tests/ui/errors/snapshots/parse_slice_pattern_unexpected_token.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Syntax error
   ╭─[test.lis:4:6]
 3 │   match items {
 4 │     [+ + +] => 0,
   ·      ┬
   ·      ╰── unexpected `+` in pattern
 5 │   }
   ╰────
  help: Patterns include literals, variables, and destructuring · code: [parse.invalid_pattern]
